refactor: 完成Spring Boot 2/3双栈适配与代码质量优化
本次提交完成多维度优化与双栈适配改造：
1.  统一Servlet API依赖管理，移除公共starter直接依赖，通过boot2/boot3 starter分层适配
2.  替换javax.annotation注解为Spring原生生命周期接口，兼容SB2/SB3环境
3.  优化滑动窗口断路器实现，兼容JDK8移除floorMod依赖
4.  简化代码导入与调用，移除全类名冗余写法
5.  新增示例模块文档与多环境构建配置
6.  完善Dashboard安全拦截器与单元测试覆盖
7.  新增架构测试规则校验stater依赖边界